--- a/Sun Tours-Website/index.html
+++ b/Sun Tours-Website/index.html
@@ -87,14 +87,15 @@
 
         <!-- er zijn 3 van deze collumns per row met ieder hun eigen afbeelding en text
         bij scalen komen ze onder elkaar te staan -->
+
         <div class="col-md-4 text-center">
-          <a href="zonvakantie.html"><img class="img-fluid p-5 indexPics" src="images/faq.png" alt="x"></a>
+          <a href="autoverhuur.html"><img class="img-fluid p-5 indexPics" src="images/car-rental.png" alt="x"></a>
           <h5>
-            Zonvakanties
+            Autoverhuur
           </h5>
           <p>
-            Bent u opzoek naar een heerlijke zorgenlosen vakantie?
-            Dan bent u hier aan het juiste adres.
+            Niet alleen bieden wij hulp bij het kopen van vliegtickets
+            ook kunt u bij ons terecht voor hulp bij autoverhuur
           </p>
         </div>
         <!-- einde col 1 -->
@@ -125,13 +126,13 @@
       <div class="row">
 
         <div class="col-md-4 text-center">
-          <a href="autoverhuur.html"><img class="img-fluid p-5 indexPics" src="images/car-rental.png" alt="x"></a>
+          <a href="zonvakantie.html"><img class="img-fluid p-5 indexPics" src="images/faq.png" alt="x"></a>
           <h5>
-            Autoverhuur
+            FAQ
           </h5>
           <p>
-            Niet alleen bieden wij hulp bij het kopen van vliegtickets
-            ook kunt u bij ons terecht voor hulp bij autoverhuur
+            Heeft u een vraag? misschien heeft iemand deze vraag al beandwoord.
+
           </p>
         </div>
 
