--- a/Sun Tours-Website/boekingen.html
+++ b/Sun Tours-Website/boekingen.html
@@ -9,12 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <style>
-  .fakeimg {
-    height: 200px;
-    background: #aaa;
-  }
-  </style>
+
 </head>
 <body>          
 
@@ -28,16 +23,20 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
+        <a class="nav-link" href="assortiment.html">Assortiment</a>
+      </li>    
+      <li class="nav-item">
         <a class="nav-link" href="boekingen.html">Boekingen</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="contact.html">Contact</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="assortiment.html">Assortiment</a>
-      </li>    
+
       <li class="nav-item">
         <a class="nav-link" href="aanmelden.html">Aanmelden</a>
+      </li> 
+      <li class="nav-item">
+        <a class="nav-link" href="FAQ.html">FAQ</a>
       </li> 
     </ul>
   </div>  
