--- a/Sun Tours-Website/contact.html
+++ b/Sun Tours-Website/contact.html
@@ -9,12 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <style>
-  .fakeimg {
-    height: 200px;
-    background: #aaa;
-  }
-  </style>
+
 </head>
 <body>          
 
@@ -28,27 +23,53 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
+        <a class="nav-link" href="assortiment.html">Assortiment</a>
+      </li>    
+      <li class="nav-item">
         <a class="nav-link" href="boekingen.html">Boekingen</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="contact.html">Contact</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="assortiment.html">Assortiment</a>
-      </li>    
+
       <li class="nav-item">
         <a class="nav-link" href="aanmelden.html">Aanmelden</a>
+      </li> 
+      <li class="nav-item">
+        <a class="nav-link" href="FAQ.html">FAQ</a>
       </li> 
     </ul>
   </div>  
 </nav>
-
+<div class = "header2">
+<h1>contact form</h1><br>
+</div>
 <main>
-  
+  <h2 class = "contact_toptext">contact</h2><br>
+  <div class="c-form__progress"></div>
+  <div class="wrapper Val">
+      <form method="POST" id="contact">
+        <label>Uw naam (verplicht)</label><br>
+        <input type="text" id="contact_naam" name="contact_naam" placeholder="Naam" required="true"><br><br>
+        <label>Uw email (verplicht)</label><br>
+        <input type="email" id="contact_email" name="contact_email" placeholder="email@email.com" required="true"><br><br>
+        <label>Onderwerp</label><br>
+        <input type="text" id="contact_onderwerp" name="contact_onderwerp" placeholder="Onderwerp"><br><br>
+        <textarea id="contact_text" name="contact_text" rows="4" cols="50"></textarea><br><br>
+        <input type="submit" value="Verzend" id="contact_button" class="sendKnop">
+      </form>
+      <div class="info">
+        <h5>Laat U meening achter!</h5>
+        <p>onze andere klanten geven om ons★★★★☆ ( Beoordelingen)
+          Problemen met invullen. Neem contact met ons op en we helpen u graag.</p>
+
+      </div>
+      </div>
+    </div>
 </main>
 
-
 </body>
+
 
  <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
  <footer>
@@ -84,3 +105,23 @@
     <!-- bottom footer -->
   </footer>
 </html>
+
+
+<!-- <div class="c-form__progress"></div>
+<div class="wrapper Val">
+
+  <div class="formContent" id="contact-form">
+    <h2 class="actief"> Contact Opnemen </h2>
+
+    <div class="fadeIn first">
+      <img src="images/SunLogo.png" id="icon" alt="Profiel
+  " />
+    </div>
+    <form method="POST" id="Contact">
+      <label>loruml ipsum </label><br>
+      <input type="text" id="login" name="usern" placeholder="login"><br><br>
+      <label>loral ipsum</label><br>
+      <input type="password" id="wachtwoord" name="passwd" placeholder="wachtwoord" minlength="8"><br><br>
+      <input type="submit" value="Log In" id="loginKnop" class="sendKnop">
+    </form>
+  </div> -->
