--- a/Sun Tours-Website/index.html
+++ b/Sun Tours-Website/index.html
@@ -36,6 +36,9 @@
       <li class="nav-item">
         <a class="nav-link" href="aanmelden.html">Aanmelden</a>
       </li> 
+      <li class="nav-item">
+        <a class="nav-link" href="FAQ.html">FAQ</a>
+      </li> 
     </ul>
   </div>  
 </nav>
@@ -119,7 +122,7 @@
       </div>
       <!-- einde row 1 -->
       <div class="col-md-4 text-center">
-        <a href="zonvakantie.html"><img class="img-fluid p-5 indexPics" src="images/faq.png" alt="x"></a>
+        <a href="FAQ.html"><img class="img-fluid p-5 indexPics" src="images/faq.png" alt="x"></a>
         <h5>
           FAQ
         </h5>
