--- a/Sun Tours-Website/registreren.html
+++ b/Sun Tours-Website/registreren.html
@@ -23,16 +23,20 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
+        <a class="nav-link" href="assortiment.html">Assortiment</a>
+      </li>    
+      <li class="nav-item">
         <a class="nav-link" href="boekingen.html">Boekingen</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="contact.html">Contact</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="assortiment.html">Assortiment</a>
-      </li>    
+
       <li class="nav-item">
         <a class="nav-link" href="aanmelden.html">Aanmelden</a>
+      </li> 
+      <li class="nav-item">
+        <a class="nav-link" href="FAQ.html">FAQ</a>
       </li> 
     </ul>
   </div>  
