--- a/Sun Tours-Website/contact.html
+++ b/Sun Tours-Website/contact.html
@@ -38,6 +38,9 @@
       <li class="nav-item">
         <a class="nav-link" href="FAQ.html">FAQ</a>
       </li> 
+      <li class="nav-item">
+        <a class="nav-link" href="Review.html">Review</a>
+      </li>
     </ul>
   </div>  
 </nav>
