begin gemaakt aan spanje pagina
begin gemaakt aan spanje pagina

--- a/assortimenten/spanje.html
+++ b/assortimenten/spanje.html
@@ -45,12 +45,18 @@
 <main>
   
 </main>
+<div class="assortiment-first-image img_1-1">
+
+</div>
+<div class="assortiment-first-text">
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore rem officia sit quod esse, excepturi nostrum maiores veritatis laudantium id? Distinctio veritatis dicta amet repellat suscipit iste, expedita culpa inventore impedit ea eveniet repudiandae repellendus unde eligendi magnam? Nesciunt alias maiores voluptate, illum, pariatur et placeat repudiandae soluta quo repellendus incidunt delectus sint a, modi excepturi deleniti sit corrupti? Dolore libero voluptatem tempore recusandae inventore magnam fuga cum vero, nesciunt incidunt est doloribus eaque magni suscipit. Tempore sit, iusto animi vel ea maxime quidem totam est voluptas minus alias dolore omnis. Nam consequatur laborum ab fugit consequuntur numquam pariatur adipisci. dolor sit, amet consectetur adipisicing elit. Quia quam amet reiciendis fuga, quas debitis, cumque facere numquam adipisci, mollitia dolorum aliquam explicabo asperiores itaque! Iusto atque ab modi consequuntur, quis dignissimos voluptatum! Cum sapiente officia nostrum animi. Consectetur similique sapiente incidunt cumque nostrum corporis obcaecati delectus. Quaerat, praesentium corrupti!
+</div>
 
 
 </body>
 
  <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
- <footer>
+ <footer class="assortiment_footer2">
     <!-- start topfooter -->
     <div class="topFooter">
       <div class="row">
@@ -75,7 +81,6 @@
       </div>
     </div>
     <!-- einde topfooter -->
-
     <!-- start bottom footer -->
     <div class="bottomFooter">
       copyright &copy; 2021 <i>Ontworpen door: Thomas-Thomas-Stef-Lucas</i>
