--- a/Sun Tours-Website/assortiment.html
+++ b/Sun Tours-Website/assortiment.html
@@ -69,7 +69,7 @@
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="../assortimenten/spanje.html">Bekijk aanbod</a></button>
                     </div>
-                    <small class="text-muted">9 mins</small>
+                    <small class="text-muted">€600,-p/p</small>
                   </div>
                 </div>
               </div>
@@ -84,7 +84,7 @@
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="../assortimenten/turkije.html">Bekijk aanbod</a></button>
                     </div>
-                    <small class="text-muted">9 mins</small>
+                    <small class="text-muted">€800,-p/p</small>
                   </div>
                 </div>
               </div>
@@ -99,7 +99,7 @@
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="../assortimenten/turkije2.html">Bekijk aanbod</a></button>
                     </div>
-                    <small class="text-muted">9 mins</small>
+                    <small class="text-muted">€500,-p/p</small>
                   </div>
                 </div>
               </div>
@@ -117,7 +117,7 @@
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="../assortimenten/egypte.html">Bekijk aanbod</a></button>
                     </div>
-                    <small class="text-muted">9 mins</small>
+                    <small class="text-muted">€450,-p/p</small>
                   </div>
                 </div>
               </div>
@@ -132,7 +132,9 @@
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="../assortimenten/frankrijk.html">Bekijk aanbod</a></button>
                     </div>
-                    <small class="text-muted">9 mins</small>
+                    <small class="text-muted">€950,-p/p
+
+                    </small>
                   </div>
                 </div>
               </div>
@@ -142,12 +144,12 @@
                 
                 <img class="img-fluid p-5 indexPics" src="images/background_image.png" alt="x" style="height: 225px; width: 100%; display: block;">
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Zit er niks voor u bij </p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="../assortimenten/spanje.html">Bekijk aanbod</a></button>
                     </div>
-                    <small class="text-muted">9 mins</small>
+                    <small class="text-muted"></small>
                   </div>
                 </div>
               </div>
@@ -158,19 +160,7 @@
 
     </main>
 
-    <footer class="text-muted">
-      <div class="container">
-        <p class="float-right">
-          <a href="#">Back to top</a>
-        </p>
-        <p>Album example is © Bootstrap, but please download and customize it for yourself!</p>
-        <p>New to Bootstrap? <a href="../../">Visit the homepage</a> or read our <a href="../../getting-started/">getting started guide</a>.</p>
-      </div>
-    </footer>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+   
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="../../assets/js/vendor/popper.min.js"></script>
@@ -185,7 +175,7 @@
 
 
 
- <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
+
  <footer class="assortiment_footer">
     <!-- start topfooter -->
     <div class="topFooter">
