Foto en  tekst toegevoegd

--- a/assortimenten/spanje.html
+++ b/assortimenten/spanje.html
@@ -43,15 +43,61 @@
 </nav>
 
 <main>
-  
+  <section class="jumbotron text-center">
+    <div class="container">
+      <h1 class="jumbotron-heading">Spanje</h1>
+      <p class="lead text-muted">Bij Sun Tours bieden wij de leukste en gezelligste vakanties aan.</p>
+    </div>
+  </section>
 </main>
 <div class="assortiment-first-image img_1-1">
 
 </div>
 <div class="assortiment-first-text">
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore rem officia sit quod esse, excepturi nostrum maiores veritatis laudantium id? Distinctio veritatis dicta amet repellat suscipit iste, expedita culpa inventore impedit ea eveniet repudiandae repellendus unde eligendi magnam? Nesciunt alias maiores voluptate, illum, pariatur et placeat repudiandae soluta quo repellendus incidunt delectus sint a, modi excepturi deleniti sit corrupti? Dolore libero voluptatem tempore recusandae inventore magnam fuga cum vero, nesciunt incidunt est doloribus eaque magni suscipit. Tempore sit, iusto animi vel ea maxime quidem totam est voluptas minus alias dolore omnis. Nam consequatur laborum ab fugit consequuntur numquam pariatur adipisci. dolor sit, amet consectetur adipisicing elit. Quia quam amet reiciendis fuga, quas debitis, cumque facere numquam adipisci, mollitia dolorum aliquam explicabo asperiores itaque! Iusto atque ab modi consequuntur, quis dignissimos voluptatum! Cum sapiente officia nostrum animi. Consectetur similique sapiente incidunt cumque nostrum corporis obcaecati delectus. Quaerat, praesentium corrupti!
+  
+<b>Reispakketten All inclusive(8 dagen)Hotel Best Tenerife-Spanje </b>Een stukje Nederland op Tenerife
+
+Best Tenerife, de naam zegt het al. Een zeer geliefd hotel met veel faciliteiten, een goede sfeer en een centrale ligging in Playa de las Americas. Rond het zwembad is een fraaie tuin met subtropische planten, waar je kunt genieten van de Spaanse zon. Hotel Best Tenerife is een uitstekende keuze voor families met kinderen, maar ook voor stellen is hier genoeg te doen. Geniet hier van je vakantie waar het aan niets zal ontbreken. Niet voor niets is hotel Best Tenerife al jaren een bestseller op de Nederlandse markt!<br><br>
+
+<b>Ligging</b>
+<br>
+
+Centrum op ca. 600 m<br>
+Luchthaven op ca. 17 km<br>
+Strand op ca. 350 m<br>
+Winkels op ca. 80 m<br>
+
+
+
+</div>
+<div class="assortiment-second-text">
+  
+  <b>Zwembaden</b>
+  
+  <br>
+
+  2 buitenbaden: waarvan één verwarmd tijdens de wintermaanden en een Kinderbad buiten. Badhanddoeken (borg vereist), ligbedden,parasols enZonneterras
+
+<br>
+  
+  <b>Ligging</b>
+  <br>
+  
+  Centrum op ca. 600 m<br>
+  Luchthaven op ca. 17 km<br>
+  Strand op ca. 350 m<br>
+  Winkels op ca. 80 m<br>
+  
+  
+  
+  </div>
+<div class="assortiment-first-image img_1-2">
+
 </div>
 
+<div class="assortiment-spanje">
+  
+</div>
 
 </body>
 
