--- a/assortimenten/spanje.html
+++ b/assortimenten/spanje.html
@@ -38,6 +38,9 @@
       <li class="nav-item">
         <a class="nav-link" href="../Sun Tours-Website/FAQ.html">FAQ</a>
       </li> 
+      <li class="nav-item">
+        <a class="nav-link" href="../Sun Tours-Website/Review.html">Revieuw</a>
+      </li> 
     </ul>
   </div>  
 </nav>
