--- a/assortimenten/turkije.html
+++ b/assortimenten/turkije.html
@@ -38,6 +38,9 @@
       <li class="nav-item">
         <a class="nav-link" href="../Sun Tours-Website/FAQ.html">FAQ</a>
       </li> 
+      <li class="nav-item">
+        <a class="nav-link" href="../Sun Tours-Website/Review.html">Revieuw</a>
+      </li>
     </ul>
   </div>  
 </nav>
@@ -45,53 +48,58 @@
 <main>
   <section class="jumbotron text-center">
     <div class="container">
-      <h1 class="jumbotron-heading">Turkije</h1>
-      <p class="lead text-muted">Bij Sun Tours bieden wij de leukste en gezelligste vakanties aan.</p>
+      <h1 class="jumbotron-heading">Hotel Gold City -Turkije</h1>
+      <p class="lead text-muted">Turkse Rivièra, Alanya</p>
     </div>
   </section>
 </main>
-<div class="assortiment-first-image img_1-1">
+<div class="assortiment-first-image img_2-1">
 
 </div>
 <div class="assortiment-first-text">
   
-<b>Reispakketten All inclusive(8 dagen)Hotel Best Tenerife-Spanje </b>Een stukje Nederland op Tenerife
+<b>Reispakketten All inclusive(8 dagen)Hotel Gold City -Turkije </b>Hotel Gold City is alleen al uniek vanwege de prachtige ligging. Tussen het Taurus-gebergte en de Middellandse zee, op de top van een berg, vind je het hotel Gold City.Hierdoor heb je een prachtig panorama uitzicht over Alanya. Bovendien kun je zich heerlijk ontspannen in het professionele wellnesscenter. Het hotel beschikt over 218 kamers, onderverdeeld over 16 verdiepingen.<br><br>
 
-Best Tenerife, de naam zegt het al. Een zeer geliefd hotel met veel faciliteiten, een goede sfeer en een centrale ligging in Playa de las Americas. Rond het zwembad is een fraaie tuin met subtropische planten, waar je kunt genieten van de Spaanse zon. Hotel Best Tenerife is een uitstekende keuze voor families met kinderen, maar ook voor stellen is hier genoeg te doen. Geniet hier van je vakantie waar het aan niets zal ontbreken. Niet voor niets is hotel Best Tenerife al jaren een bestseller op de Nederlandse markt!<br><br>
-
-<b>Ligging</b>
+<b>Ligging: Gold City Hotel</b>
 <br>
 
-Centrum op ca. 600 m<br>
-Luchthaven op ca. 17 km<br>
-Strand op ca. 350 m<br>
-Winkels op ca. 80 m<br>
+
+Gelegen op een heuvel.<br>
+Ca. 4 kilometer van het privéstrand.<br>
+Ca. 5 kilometer van Mahmutlar.<br>
+Alanya op ca. 15 kilometer.<br>
+Gratis shuttleservice naar het strand.<br>
+Tegen betaling een shuttleservice naar Alanya.<br>
+
 
 
 
 </div>
 <div class="assortiment-second-text">
   
-  <b>Zwembaden</b>
-  
+  <b>Faciliteiten</b>
   <br>
+  1 gebouw met 16 verdiepingen<br>
+  6 liften<br>
+  122 kamers<br>
+  24-uursreceptie<br>
+  Bagageruimte<br>
+  Lobby<br>
+  Tuin<br>
+  Gratis wifi in de openbare ruimtes<br>
+  Kapsalon*<br>
+  Winkeltjes en minimarkt*<br>
+  Wasservice*<br>
+  Doktersservice*<br>
+  Privé parkeerterrein<br>
 
-  2 buitenbaden: waarvan één verwarmd tijdens de wintermaanden en een Kinderbad buiten. Badhanddoeken (borg vereist), ligbedden,parasols enZonneterras
+  *Tegen betaling
 
-<br>
-  
-  <b>Ligging</b>
-  <br>
-  
-  Centrum op ca. 600 m<br>
-  Luchthaven op ca. 17 km<br>
-  Strand op ca. 350 m<br>
-  Winkels op ca. 80 m<br>
   
   
   
   </div>
-<div class="assortiment-first-image img_1-2">
+<div class="assortiment-first-image img_2-2">
 
 </div>
 
