changes image and text
changes image and text

--- a/Sun Tours-Website/index.html
+++ b/Sun Tours-Website/index.html
@@ -52,19 +52,18 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <h4>
-            Kwaliteit-Gemak-Betaalbaar
+            Kwaliteit-Gemak-duurzaam
           </h4>
           <h1>
             Het beste touring bedrijf van Nederland
           </h1>
           <h5>
-            Sun Tours is een touring bedrijf dat korte en/of lang vakanties organiseert naar Parijs, Londen,
-            Stockholm, Ibiza, Berlijn…… in luxe hotels. Sun Tours organiseert ook Zonvakanties, Wintersport-Ski
-            vakanties, All inclusive vakanties, Je kunt ook autoverhuur en vluchten bij Sun Tours regelen.
+            Hier bij sun tours vinden wij de natuur heel erg belangrijk.
+            wij geven veel om onze carbon footprint. en wij streven naar een groenen planeet.
           </h5>
         </div>
         <div class="col-lg-6" class="vacationImage">
-          <img class="img-fluid" src="images/topSectionPic.png" alt="x">
+          <img class="img-fluid" src="images/homepage_image.jpg" alt="x">
         </div>
       </div>
     </div>
