--- a/Sun Tours-Website/index.html
+++ b/Sun Tours-Website/index.html
@@ -27,9 +27,6 @@
         <a class="nav-link" href="assortiment.html">Assortiment</a>
       </li>    
       <li class="nav-item">
-        <a class="nav-link" href="boekingen.html">Boekingen</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" href="contact.html">Contact</a>
       </li>
 
@@ -112,7 +109,7 @@
         </div>
 
         <div class="col-md-4 text-center">
-          <a href="boekingen.html"><img class="img-fluid p-5 indexPics" src="images/plane-ticket.png" alt="x"></a>
+          <a href="assortiment.html"><img class="img-fluid p-5 indexPics" src="images/plane-ticket.png" alt="x"></a>
           <h5>
             Boekingen
           </h5>
