vliegen en auto
vliegen en auto

--- a/Sun Tours-Website/Review.html
+++ b/Sun Tours-Website/Review.html
@@ -102,32 +102,23 @@
                         </textarea>
                     <br>
                     <br>
-                    <label>Zou u dit product aanbevelen aan anderen:</label>
+                    <label>Zou u deze website aanbevelen?</label>
                      <br>
                     <form>
                         <input type="radio" id="html" name="fav_language" value="HTML">
                         <label for="html">Ja</label><br>
                         <input type="radio" id="css" name="fav_language" value="CSS">
                         <label for="css">Nee</label><br>
-                        <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-                        <label for="javascript">Ik twijfel</label>
                         <br>
-                        <br>
-                        <input type="submit" value="Verzenden">
+                        <input type="submit" value="Verzenden" >
                     </form>
                 </div>
                 
             </form>
 
         </div>
-
-
-
     </main>
-
-
 </body>
-
 <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
 <footer>
     <!-- start topfooter -->
