--- a/Sun Tours-Website/contact.html
+++ b/Sun Tours-Website/contact.html
@@ -59,7 +59,7 @@
         <input type="submit" value="Verzend" id="contact_button" class="sendKnop">
       </form>
       <div class="info">
-        <h5>Laat U meening achter!</h5>
+        <h5>Laat U mening achter!</h5>
         <p>onze andere klanten geven om ons★★★★☆ ( Beoordelingen)
           Problemen met invullen. Neem contact met ons op en we helpen u graag.</p>
 
