--- a/Sun Tours-Website/index.html
+++ b/Sun Tours-Website/index.html
@@ -87,7 +87,7 @@
         <div class="row">
 
           <div class="col-md-4 text-center">
-            <a href="autoverhuur.html"><img class="img-fluid p-5 indexPics" src="images/car-rental.png" alt="x"></a>
+            <img class="img-fluid p-5 indexPics" src="images/car-rental.png" alt="x">
             <h5>
               Vervoer
             </h5>
@@ -99,7 +99,7 @@
         <!-- einde col 1 -->
 
         <div class="col-md-4 text-center">
-          <a href="wintersport.html"><img class="img-fluid p-5 indexPics" src="images/revieuw.jpg" alt="x"></a>
+          <a href="Review.html"><img class="img-fluid p-5 indexPics" src="images/revieuw.jpg" alt="x"></a>
           <h5>
             Review
           </h5>
