--- a/Sun Tours-Website/boekingen.html
+++ b/Sun Tours-Website/boekingen.html
@@ -74,7 +74,7 @@
         </div>
         <div id="autos">
           <label>Merk:</label><br>
-          <select id=auto onclick="test()">
+          <select id="auto" onchange="getselectedvalue()">
             <option value="keuze" disabled selected>-</option>
             <option value="Nissan">Nissan</option>
             <option value="Opel">Opel</option>
