pathing issues resolved
pathing issues resolved

--- a/Sun Tours-Website/contact.html
+++ b/Sun Tours-Website/contact.html
@@ -30,7 +30,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="../php/aanmelden.php">Aanmelden</a>
+        <a class="nav-link" href="../Sun Tours-Website/php/aanmelden.php">Aanmelden</a>
       </li> 
       <li class="nav-item">
         <a class="nav-link" href="FAQ.html">FAQ</a>
@@ -42,7 +42,7 @@
   </div>  
 </nav>
 <div class = "header2">
-<h1>contact form</h1><br>
+<h1>contact</h1><br>
 </div>
 <main>
   <h2 class = "contact_toptext">contact</h2><br>
