--- a/Sun Tours-Website/index.html
+++ b/Sun Tours-Website/index.html
@@ -31,7 +31,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="php/aanmelden.php">Aanmelden</a>
+        <a class="nav-link" href="../Sun Tours-Website/php/aanmelden.php">Aanmelden</a>
       </li> 
       <li class="nav-item">
         <a class="nav-link" href="FAQ.html">FAQ</a>
@@ -131,7 +131,7 @@
       
 
         <div class="col-md-4 text-center">
-          <a href="aanmelden.php"><img class="img-fluid p-5 indexPics" src="images/guests-book.png" alt="x"></a>
+          <a href="../Sun Tours-Website/php/aanmelden.php"><img class="img-fluid p-5 indexPics" src="images/guests-book.png" alt="x"></a>
           <h5>
             aanmelden
           </h5>
