--- a/Sun Tours-Website/registreren.html
+++ b/Sun Tours-Website/registreren.html
@@ -30,7 +30,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="../php/aanmelden.php">Aanmelden</a>
+        <a class="nav-link" href="../Sun Tours-Website/php/aanmelden.php">Aanmelden</a>
       </li> 
       <li class="nav-item">
         <a class="nav-link" href="FAQ.html">FAQ</a>
