review-contact responsive

--- a/Sun Tours-Website/FAQ.html
+++ b/Sun Tours-Website/FAQ.html
@@ -231,7 +231,7 @@
 </body>
 
 <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
-<footer>
+<footer id="faqFooterFix">
   <!-- start topfooter -->
   <div class="topFooter">
     <div class="row">
