--- a/assortimenten/spanje.html
+++ b/assortimenten/spanje.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Sun Tours</title>
   <meta charset="utf-8">
@@ -11,126 +12,148 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </head>
-<body>          
+
+<body>
 
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <a href="../Sun Tours-Website/index.html"><img class="img-fluid" src="../Sun Tours-Website/images/SunLogo.png" alt="x"
-        style="width: 60px;"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="../Sun Tours-Website/assortiment.html">Assortiment</a>
-      </li>    
-      <li class="nav-item">
-        <a class="nav-link" href="../Sun Tours-Website/contact.html">Contact</a>
-      </li>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <a href="../Sun Tours-Website/index.html"><img class="img-fluid" src="../Sun Tours-Website/images/SunLogo.png"
+        alt="x" style="width: 60px;"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="../Sun Tours-Website/assortiment.html">Assortiment</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../Sun Tours-Website/contact.html">Contact</a>
+        </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="../Sun Tours-Website/aanmelden.php">Aanmelden</a>
-      </li> 
-      <li class="nav-item">
-        <a class="nav-link" href="../Sun Tours-Website/FAQ.html">FAQ</a>
-      </li> 
-      <li class="nav-item">
-        <a class="nav-link" href="../Sun Tours-Website/Review.html">Revieuw</a>
-      </li> 
-    </ul>
-  </div>  
-</nav>
-
-<main>
-  <section class="jumbotron text-center">
-    <div class="container">
-      <h1 class="jumbotron-heading">Spanje</h1>
-      <p class="lead text-muted">Bij Sun Tours bieden wij de leukste en gezelligste vakanties aan.</p>
+        <li class="nav-item">
+          <a class="nav-link" href="../Sun Tours-Website/aanmelden.php">Aanmelden</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../Sun Tours-Website/FAQ.html">FAQ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../Sun Tours-Website/Review.html">Review</a>
+        </li>
+      </ul>
     </div>
-  </section>
-</main>
-<div class="assortiment-first-image img_1-1">
+  </nav>
 
-</div>
-<div class="assortiment-first-text">
-  
-<b>Reispakketten All inclusive(8 dagen)Hotel Best Tenerife-Spanje </b>Een stukje Nederland op Tenerife
+  <main>
+    <section class="jumbotron text-center">
+      <div class="container">
+        <h1 class="jumbotron-heading">Spanje</h1>
+        <p class="lead text-muted">Bij Sun Tours bieden wij de leukste en gezelligste vakanties aan.</p>
+      </div>
+    </section>
 
-Best Tenerife, de naam zegt het al. Een zeer geliefd hotel met veel faciliteiten, een goede sfeer en een centrale ligging in Playa de las Americas. Rond het zwembad is een fraaie tuin met subtropische planten, waar je kunt genieten van de Spaanse zon. Hotel Best Tenerife is een uitstekende keuze voor families met kinderen, maar ook voor stellen is hier genoeg te doen. Geniet hier van je vakantie waar het aan niets zal ontbreken. Niet voor niets is hotel Best Tenerife al jaren een bestseller op de Nederlandse markt!<br><br>
-
-<b>Ligging</b>
-<br>
-
-Centrum op ca. 600 m<br>
-Luchthaven op ca. 17 km<br>
-Strand op ca. 350 m<br>
-Winkels op ca. 80 m<br>
-
-
-
-</div>
-<div class="assortiment-second-text">
-  
-  <b>Zwembaden</b>
-  
-  <br>
-
-  2 buitenbaden: waarvan één verwarmd tijdens de wintermaanden en een Kinderbad buiten. Badhanddoeken (borg vereist), ligbedden,parasols enZonneterras
-
-<br>
-  
-  <b>Ligging</b>
-  <br>
-  
-  Centrum op ca. 600 m<br>
-  Luchthaven op ca. 17 km<br>
-  Strand op ca. 350 m<br>
-  Winkels op ca. 80 m<br>
-  
-  
-  
-  </div>
-<div class="assortiment-first-image img_1-2">
-
-</div>
-
-<div class="assortiment-spanje">
-  
-</div>
-
-</body>
-
- <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
- <footer class="assortiment_footer2">
-    <!-- start topfooter -->
-    <div class="topFooter">
+    <div class="container">
       <div class="row">
-        <div class="col-5 mx-4 mb-1">
-          <a>Suntours</a></br>
-          <a>Bredeweg 235, 6042 GE Roermond</a></br>
-          <a>06-13022010</a></br>
-          <a>088 2365148</a></br>
-        </div>
-        <div class="col-3 mx-3 mt-3">
-          <div class="row mx-1">
-            <a href=""><img class="img-fluid" src="../Sun Tours-Website/images/facebook.png" alt="x"
-              style="width: 60px;"></a>
-              <a href=""><img class="img-fluid" src="../Sun Tours-Website/images/twitter.png" alt="x"
-                style="width: 60px;"></a>
-        <div class="mt-1 mx-1">      
-            <a href=""><img class="img-fluid" src="../Sun Tours-Website/images/youtube.png" alt="x"
-              style="width: 53px;"></a>
+        <div class="col">
+          <div class="assortiment-first-image img_1-1">
+
           </div>
+
         </div>
+
+        <div class="col">
+          <div class="assortiment-first-text">
+
+            <b>Reispakketten All inclusive(8 dagen)Hotel Best Tenerife-Spanje </b>Een stukje Nederland op Tenerife
+
+            Best Tenerife, de naam zegt het al. Een zeer geliefd hotel met veel faciliteiten, een goede sfeer en een
+            centrale ligging in Playa de las Americas. Rond het zwembad is een fraaie tuin met subtropische planten,
+            waar je kunt genieten van de Spaanse zon. Hotel Best Tenerife is een uitstekende keuze voor families met
+            kinderen, maar ook voor stellen is hier genoeg te doen. Geniet hier van je vakantie waar het aan niets zal
+            ontbreken. Niet voor niets is hotel Best Tenerife al jaren een bestseller op de Nederlandse markt!<br><br>
+
+            <b>Ligging</b>
+            <br>
+
+            Centrum op ca. 600 m<br>
+            Luchthaven op ca. 17 km<br>
+            Strand op ca. 350 m<br>
+            Winkels op ca. 80 m<br>
+
+
+
+          </div>
+
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="assortiment-second-text">
+
+            <b>Zwembaden</b>
+
+            <br>
+
+            2 buitenbaden: waarvan één verwarmd tijdens de wintermaanden en een Kinderbad buiten. Badhanddoeken (borg
+            vereist), ligbedden,parasols enZonneterras
+
+            <br>
+
+            <b>Ligging</b>
+            <br>
+
+            Centrum op ca. 600 m<br>
+            Luchthaven op ca. 17 km<br>
+            Strand op ca. 350 m<br>
+            Winkels op ca. 80 m<br>
+
+
+
+          </div>
+          <div class="col">
+            <div class="assortiment-first-image img_1-2">
+
+            </div>
+
+          </div>
         </div>
       </div>
     </div>
-    <!-- einde topfooter -->
-    <!-- start bottom footer -->
-    <div class="bottomFooter">
-      copyright &copy; 2021 <i>Ontworpen door: Thomas-Thomas-Stef-Lucas</i>
+
+</body>
+
+<!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
+<footer class="assortiment_footer2">
+  <!-- start topfooter -->
+  <div class="topFooter">
+    <div class="row">
+      <div class="col-5 mx-4 mb-1">
+        <a>Suntours</a></br>
+        <a>Bredeweg 235, 6042 GE Roermond</a></br>
+        <a>06-13022010</a></br>
+        <a>088 2365148</a></br>
+      </div>
+      <div class="col-3 mx-3 mt-3">
+        <div class="row mx-1">
+          <a href=""><img class="img-fluid" src="../Sun Tours-Website/images/facebook.png" alt="x"
+              style="width: 60px;"></a>
+          <a href=""><img class="img-fluid" src="../Sun Tours-Website/images/twitter.png" alt="x"
+              style="width: 60px;"></a>
+          <div class="mt-1 mx-1">
+            <a href=""><img class="img-fluid" src="../Sun Tours-Website/images/youtube.png" alt="x"
+                style="width: 53px;"></a>
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- bottom footer -->
-  </footer>
+  </div>
+  <!-- einde topfooter -->
+  <!-- start bottom footer -->
+  <div class="bottomFooter">
+    copyright &copy; 2021 <i>Ontworpen door: Thomas-Thomas-Stef-Lucas</i>
+  </div>
+  <!-- bottom footer -->
+</footer>
+
 </html>
