--- a/Sun Tours-Website/contact.html
+++ b/Sun Tours-Website/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Sun Tours</title>
   <meta charset="utf-8">
@@ -11,99 +12,110 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </head>
-<body>          
+
+<body>
 
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <a href="index.html"><img class="img-fluid" src="images/SunLogo.png" alt="x"
-        style="width: 60px;"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="assortiment.html">Assortiment</a>
-      </li>    
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
-      </li>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <a href="index.html"><img class="img-fluid" src="images/SunLogo.png" alt="x" style="width: 60px;"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="assortiment.html">Assortiment</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="../Sun Tours-Website/php/aanmelden.php">Aanmelden</a>
-      </li> 
-      <li class="nav-item">
-        <a class="nav-link" href="FAQ.html">FAQ</a>
-      </li> 
-      <li class="nav-item">
-        <a class="nav-link" href="Review.html">Review</a>
-      </li>
-    </ul>
-  </div>  
-</nav>
-<div class = "header2">
-<h1>contact</h1><br>
-</div>
-<main>
-  <h2 class = "contact_toptext">contact</h2><br>
-  <div class="c-form__progress"></div>
-  <div class="wrapper Val">
+        <li class="nav-item">
+          <a class="nav-link" href="../Sun Tours-Website/php/aanmelden.php">Aanmelden</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="FAQ.html">FAQ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Review.html">Review</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="header2">
+    <h1>contact</h1><br>
+  </div>
+  <main>
+    <h2 class="contact_toptext">contact</h2><br>
+    <div class="c-form__progress"></div>
+
+
+
+
+    <div class="wrapper Val">
+
+
+
+
       <form method="POST" id="contact">
         <label>Uw naam (verplicht)</label><br>
-        <input type="text" id="contact_naam" name="contact_naam" placeholder="Naam" required="true"><br><br>
+        <input type="text" class="contactInput" id="contact_naam" name="contact_naam" placeholder="Naam"
+          required="true"><br><br>
         <label>Uw email (verplicht)</label><br>
-        <input type="email" id="contact_email" name="contact_email" placeholder="email@email.com" required="true"><br><br>
+        <input type="email" class="contactInput" id="contact_email" name="contact_email" placeholder="email@email.com"
+          required="true"><br><br>
         <label>Onderwerp</label><br>
-        <input type="text" id="contact_onderwerp" name="contact_onderwerp" placeholder="Onderwerp"><br><br>
-        <textarea id="contact_text" name="contact_text" rows="4" cols="50"></textarea><br><br>
-        <input type="submit" value="Verzend" id="contact_button" class="sendKnop">
+        <input type="text" class="contactInput" id="contact_onderwerp" name="contact_onderwerp"
+          placeholder="Onderwerp"><br><br>
+        <textarea id="contact_text" class="contactArea" name="contact_text" rows="4" cols="50"></textarea><br><br>
+        <input type="submit" class="buttonContact" value="Verzend" id="contact_button" class="sendKnop">
       </form>
+
       <div class="info">
         <h5>Laat U mening achter!</h5>
         <p>onze andere klanten geven om ons★★★★☆ ( Beoordelingen)
           Problemen met invullen. Neem contact met ons op en we helpen u graag.</p>
 
       </div>
-      </div>
     </div>
-</main>
+    </div>
+
+  </main>
 
 </body>
 
 
- <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
- <footer>
-    <!-- start topfooter -->
-    <div class="topFooter">
-      <div class="row">
-        <div class="col-5 mx-4 mb-1">
-          <a>Suntours</a></br>
-          <a>Bredeweg 235, 6042 GE Roermond</a></br>
-          <a>06-13022010</a></br>
-          <a>088 2365148</a></br>
-        </div>
-        <div class="col-3 mx-3 mt-3">
-          <div class="row mx-1">
-            <a href=""><img class="img-fluid" src="images/facebook.png" alt="x"
-              style="width: 60px;"></a>
-              <a href=""><img class="img-fluid" src="images/twitter.png" alt="x"
-                style="width: 60px;"></a>
-        <div class="mt-1 mx-1">      
-            <a href=""><img class="img-fluid" src="images/youtube.png" alt="x"
-              style="width: 53px;"></a>
+<!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
+<footer>
+  <!-- start topfooter -->
+  <div class="topFooter">
+    <div class="row">
+      <div class="col-5 mx-4 mb-1">
+        <a>Suntours</a></br>
+        <a>Bredeweg 235, 6042 GE Roermond</a></br>
+        <a>06-13022010</a></br>
+        <a>088 2365148</a></br>
+      </div>
+      <div class="col-3 mx-3 mt-3">
+        <div class="row mx-1">
+          <a href=""><img class="img-fluid" src="images/facebook.png" alt="x" style="width: 60px;"></a>
+          <a href=""><img class="img-fluid" src="images/twitter.png" alt="x" style="width: 60px;"></a>
+          <div class="mt-1 mx-1">
+            <a href=""><img class="img-fluid" src="images/youtube.png" alt="x" style="width: 53px;"></a>
           </div>
-        </div>
         </div>
       </div>
     </div>
-    <!-- einde topfooter -->
+  </div>
+  <!-- einde topfooter -->
 
-    <!-- start bottom footer -->
-    <div class="bottomFooter">
-      copyright &copy; 2021 <i>Ontworpen door: Thomas-Thomas-Stef-Lucas</i>
-    </div>
-    <!-- bottom footer -->
-  </footer>
+  <!-- start bottom footer -->
+  <div class="bottomFooter">
+    copyright &copy; 2021 <i>Ontworpen door: Thomas-Thomas-Stef-Lucas</i>
+  </div>
+  <!-- bottom footer -->
+</footer>
+
 </html>
 
 
