--- a/Sun Tours-Website/index.html
+++ b/Sun Tours-Website/index.html
@@ -131,7 +131,7 @@
       
 
         <div class="col-md-4 text-center">
-          <a href="aanmelden.php"><img class="img-fluid p-5 indexPics" src="images/guests-book.png" alt="x"></a>
+          <a href="php/aanmelden.php"><img class="img-fluid p-5 indexPics" src="images/guests-book.png" alt="x"></a>
           <h5>
             aanmelden
           </h5>
