Front end fixes

--- a/assortimenten/spanje.html
+++ b/assortimenten/spanje.html
@@ -120,7 +120,7 @@
         </div>
       </div>
     </div>
-
+  </main>
 </body>
 
 <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
