--- a/assortimenten/turkije2.html
+++ b/assortimenten/turkije2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="assortiment">
 
 <head>
   <title>Sun Tours</title>
@@ -32,7 +32,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="../Sun Tours-Website/aanmelden.php">Aanmelden</a>
+          <a class="nav-link" href="../Sun Tours-Website/php/aanmelden.php">Aanmelden</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="../Sun Tours-Website/FAQ.html">FAQ</a>
