--- a/Sun Tours-Website/contact.html
+++ b/Sun Tours-Website/contact.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body class="Contact_Background">
 
 
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -78,7 +78,7 @@
 
       </div>
     </div>
-    </div>
+   
 
   </main>
 
